--- a/src/Hydrogen/Hydrogen/App.axaml
+++ b/src/Hydrogen/Hydrogen/App.axaml
@@ -3,13 +3,16 @@
              xmlns:local="using:Hydrogen"
              x:Class="Hydrogen.App"
              RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+    <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
     <Application.DataTemplates>
-        <local:ViewLocator/>
+        <local:ViewLocator />
     </Application.DataTemplates>
 
-    <Application.Styles>
-        <FluentTheme />
-    </Application.Styles>
+    <Application.Resources>
+        <SolidColorBrush x:Key="DarkBrush">#0B0505</SolidColorBrush>
+        <SolidColorBrush x:Key="PrimaryBrush">#B8E1F2</SolidColorBrush>
+        <SolidColorBrush x:Key="Primary75Brush">#8DAAB7</SolidColorBrush>
+        <SolidColorBrush x:Key="Primary50Brush">#61737B</SolidColorBrush>
+    </Application.Resources>
 </Application>
