Add Tile Control

--- a/src/Hydrogen/Hydrogen/App.axaml
+++ b/src/Hydrogen/Hydrogen/App.axaml
@@ -23,5 +23,6 @@
     
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="avares://Hydrogen/TemplatedControls/TileControl.axaml"></StyleInclude>
     </Application.Styles>
 </Application>
