Add MenuButtonControl to VerticalMenuView
Redesigns vertical menu layout to make menu button control work nicely

--- a/src/Hydrogen/Hydrogen/Views/MainWindow.axaml
+++ b/src/Hydrogen/Hydrogen/Views/MainWindow.axaml
@@ -8,5 +8,5 @@
         x:Class="Hydrogen.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="Hydrogen">
-        <views:GameView/>
+        <views:VerticalMenuView/>
 </Window>
