--- a/src/Hydrogen/Hydrogen/Views/HorizontalMenuView.axaml
+++ b/src/Hydrogen/Hydrogen/Views/HorizontalMenuView.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:templatedControls="clr-namespace:Hydrogen.TemplatedControls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
              x:Class="Hydrogen.Views.HorizontalMenuView">
     <Grid RowDefinitions="6*, 2*, *" ColumnDefinitions="*"
@@ -21,55 +22,26 @@
                 </TextBlock>
             </Viewbox>
 
+            <!-- Options -->
             <Grid Name="Options"
                   Grid.Column="1" Grid.Row="1"
                   ColumnDefinitions="2*, *, 2*, *, 2*, *, 2*, *">
-                <!-- REMOVE LATER -->
-                <!-- Option Button -->
-                <Grid Grid.Row="0" Grid.Column="0"
-                      RowDefinitions="*, 2*, *">
-                    <Viewbox Grid.Column="1" Grid.Row="1"
-                             HorizontalAlignment="Left">
-                        <TextBlock
-                            FontFamily="{DynamicResource RegularFont}"
-                            Foreground="{DynamicResource Primary50Brush}">
-                            Hydrogen@
-                        </TextBlock>
-                    </Viewbox>
-                </Grid>
-                <!-- Option Button -->
-                <Grid Grid.Row="0" Grid.Column="2"
-                      RowDefinitions="*, 2*, *">
-                    <Viewbox Grid.Column="1" Grid.Row="1"
-                             HorizontalAlignment="Left">
-                        <TextBlock
-                            Foreground="{DynamicResource Primary50Brush}">
-                            Hydrogen@
-                        </TextBlock>
-                    </Viewbox>
-                </Grid>
-                <!-- Option Button -->
-                <Grid Grid.Row="0" Grid.Column="4"
-                      RowDefinitions="*, 2*, *">
-                    <Viewbox Grid.Column="1" Grid.Row="1"
-                             HorizontalAlignment="Left">
-                        <TextBlock
-                            Foreground="{DynamicResource Primary50Brush}">
-                            Hydrogen
-                        </TextBlock>
-                    </Viewbox>
-                </Grid>
-                <!-- Option Button -->
-                <Grid Grid.Row="0" Grid.Column="6"
-                      RowDefinitions="*, 2*, *">
-                    <Viewbox Grid.Column="1" Grid.Row="1"
-                             HorizontalAlignment="Left">
-                        <TextBlock Name="Option"
-                                   Foreground="{DynamicResource Primary50Brush}">
-                            Hydrogen
-                        </TextBlock>
-                    </Viewbox>
-                </Grid>
+            <Viewbox Grid.Column="0"
+                     Stretch="Uniform">
+                <templatedControls:MenuButtonControl Grid.Row="2" />
+            </Viewbox>
+            <Viewbox Grid.Column="2"
+                     Stretch="Uniform">
+                <templatedControls:MenuButtonControl Grid.Row="2" />
+            </Viewbox>
+            <Viewbox Grid.Column="4"
+                     Stretch="Uniform">
+                <templatedControls:MenuButtonControl Grid.Row="2" />
+            </Viewbox>
+            <Viewbox Grid.Column="6"
+                     Stretch="Uniform">
+                <templatedControls:MenuButtonControl Grid.Row="2" />
+            </Viewbox>
             </Grid>
         </Grid>
     </Grid>
