--- a/src/Hydrogen/Hydrogen/TemplatedControls/MenuButtonControl.axaml
+++ b/src/Hydrogen/Hydrogen/TemplatedControls/MenuButtonControl.axaml
@@ -1,6 +1,8 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="using:Hydrogen.TemplatedControls">
+        xmlns:controls="using:Hydrogen.TemplatedControls"
+        x:CompileBindings="True"
+        x:DataType="controls:MenuButtonControl">
     <Design.PreviewWith>
         <controls:MenuButtonControl />
     </Design.PreviewWith>
@@ -20,15 +22,17 @@
         <Setter Property="Foreground" Value="{DynamicResource PrimaryBrush}" />
         <Setter Property="Background" Value="Transparent" />
     </Style>
-    
-    
+
+
     <Style Selector="controls|MenuButtonControl">
         <!-- Set Defaults -->
         <Setter Property="Template">
             <ControlTemplate>
-                    <Button Background="Transparent"
-                               Margin="0"
-                               Content="{TemplateBinding Text}"/>
+                <Button Name="Button"
+                        Background="Transparent"
+                        Margin="0"
+                        Command="{Binding ClickCommand, RelativeSource={RelativeSource TemplatedParent}}"
+                        Content="{TemplateBinding Text}" />
             </ControlTemplate>
         </Setter>
     </Style>
