--- a/src/Hydrogen/Hydrogen/Views/MainWindow.axaml
+++ b/src/Hydrogen/Hydrogen/Views/MainWindow.axaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Hydrogen.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Hydrogen">
-        <views:VerticalMenuView/>
+        Title="Hydrogen"
+        x:CompileBindings="True"
+        x:DataType="vm:MainViewModel">
+        <ContentControl Content="{Binding CurrentPage}"/>
 </Window>
