--- a/src/Hydrogen/Hydrogen/Views/VerticalMenuView.axaml
+++ b/src/Hydrogen/Hydrogen/Views/VerticalMenuView.axaml
@@ -3,35 +3,38 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:templatedControls="clr-namespace:Hydrogen.TemplatedControls"
+             xmlns:viewModels="clr-namespace:Hydrogen.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
-             x:Class="Hydrogen.Views.VerticalMenuView">
+             x:Class="Hydrogen.Views.VerticalMenuView"
+             x:CompileBindings="True"
+             x:DataType="viewModels:VerticalMenuViewModel">
     <Grid ColumnDefinitions="4*, 4*, 4*" RowDefinitions="*, 10*, *"
           Background="{DynamicResource DarkBrush}">
 
         <!-- Content -->
         <Grid Grid.Column="1" Grid.Row="1"
               RowDefinitions="3* ,2*, 2*, 2*, 2*, 2*, 2*">
-            <Viewbox Grid.Row="0" 
+            <Viewbox Grid.Row="0"
                      Stretch="Uniform">
-                <TextBlock Text="Title"
-                       Foreground="{DynamicResource PrimaryBrush}"
-                       FontFamily="{DynamicResource BoldFont}" />
+                <TextBlock Text="{Binding Title}"
+                           Foreground="{DynamicResource PrimaryBrush}"
+                           FontFamily="{DynamicResource BoldFont}" />
             </Viewbox>
             <Viewbox Grid.Row="1"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Grid.Row="2" />
+                <templatedControls:MenuButtonControl Name="Option0" />
             </Viewbox>
             <Viewbox Grid.Row="2"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Grid.Row="2" />
+                <templatedControls:MenuButtonControl Name="Option1" />
             </Viewbox>
             <Viewbox Grid.Row="3"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Grid.Row="2" />
+                <templatedControls:MenuButtonControl Name="Option2" />
             </Viewbox>
             <Viewbox Grid.Row="4"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Grid.Row="2" />
+                <templatedControls:MenuButtonControl Name="Option3" />
             </Viewbox>
         </Grid>
     </Grid>
