--- a/src/Hydrogen/Hydrogen/Core/Modules/UI/Pages/HorizontalMenuView.axaml
+++ b/src/Hydrogen/Hydrogen/Core/Modules/UI/Pages/HorizontalMenuView.axaml
@@ -4,10 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:Hydrogen.ViewModels"
              xmlns:templatedControls="clr-namespace:Hydrogen.TemplatedControls"
+             xmlns:pages="clr-namespace:Hydrogen.Core.Modules.UI.Pages"
+             xmlns:templatedControls1="clr-namespace:Hydrogen.Core.Modules.UI.TemplatedControls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
-             x:Class="Hydrogen.Views.HorizontalMenuView"
+             x:Class="Hydrogen.Core.Modules.UI.Pages.HorizontalMenuView"
              x:CompileBindings="True"
-             x:DataType="viewModels:HorizontalMenuViewModel">
+             x:DataType="pages:HorizontalMenuViewModel">
     <Grid RowDefinitions="6*, 2*, *" ColumnDefinitions="*"
           Background="{DynamicResource DarkBrush}">
 
@@ -30,19 +32,19 @@
                   ColumnDefinitions="2*, *, 2*, *, 2*, *, 2*, *">
             <Viewbox Grid.Column="0"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Name="Option0"/>
+                <templatedControls1:MenuButtonControl Name="Option0"/>
             </Viewbox>
             <Viewbox Grid.Column="2"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Name="Option1"/>
+                <templatedControls1:MenuButtonControl Name="Option1"/>
             </Viewbox>
             <Viewbox Grid.Column="4"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Name="Option2"/>
+                <templatedControls1:MenuButtonControl Name="Option2"/>
             </Viewbox>
             <Viewbox Grid.Column="6"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Name="Option3"/>
+                <templatedControls1:MenuButtonControl Name="Option3"/>
             </Viewbox>
             </Grid>
         </Grid>
