--- a/src/Hydrogen/Hydrogen/Core/Modules/UI/Pages/VerticalMenuView.axaml
+++ b/src/Hydrogen/Hydrogen/Core/Modules/UI/Pages/VerticalMenuView.axaml
@@ -4,10 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:templatedControls="clr-namespace:Hydrogen.TemplatedControls"
              xmlns:viewModels="clr-namespace:Hydrogen.ViewModels"
+             xmlns:pages="clr-namespace:Hydrogen.Core.Modules.UI.Pages"
+             xmlns:templatedControls1="clr-namespace:Hydrogen.Core.Modules.UI.TemplatedControls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
-             x:Class="Hydrogen.Views.VerticalMenuView"
+             x:Class="Hydrogen.Core.Modules.UI.Pages.VerticalMenuView"
              x:CompileBindings="True"
-             x:DataType="viewModels:VerticalMenuViewModel">
+             x:DataType="pages:VerticalMenuViewModel">
     <Grid ColumnDefinitions="4*, 4*, 4*" RowDefinitions="*, 10*, *"
           Background="{DynamicResource DarkBrush}">
 
@@ -22,19 +24,19 @@
             </Viewbox>
             <Viewbox Grid.Row="1"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Name="Option0" />
+                <templatedControls1:MenuButtonControl Name="Option0" />
             </Viewbox>
             <Viewbox Grid.Row="2"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Name="Option1" />
+                <templatedControls1:MenuButtonControl Name="Option1" />
             </Viewbox>
             <Viewbox Grid.Row="3"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Name="Option2" />
+                <templatedControls1:MenuButtonControl Name="Option2" />
             </Viewbox>
             <Viewbox Grid.Row="4"
                      Stretch="Uniform">
-                <templatedControls:MenuButtonControl Name="Option3" />
+                <templatedControls1:MenuButtonControl Name="Option3" />
             </Viewbox>
         </Grid>
     </Grid>
