--- a/src/Hydrogen/Hydrogen/Core/Modules/UI/TemplatedControls/MenuButtonControl.axaml
+++ b/src/Hydrogen/Hydrogen/Core/Modules/UI/TemplatedControls/MenuButtonControl.axaml
@@ -1,10 +1,11 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="using:Hydrogen.TemplatedControls"
+        xmlns:templatedControls="clr-namespace:Hydrogen.Core.Modules.UI.TemplatedControls"
         x:CompileBindings="True"
-        x:DataType="controls:MenuButtonControl">
+        x:DataType="templatedControls:MenuButtonControl">
     <Design.PreviewWith>
-        <controls:MenuButtonControl />
+        <templatedControls:MenuButtonControl />
     </Design.PreviewWith>
 
     <Style Selector="Button">
@@ -24,7 +25,7 @@
     </Style>
 
 
-    <Style Selector="controls|MenuButtonControl">
+    <Style Selector="templatedControls|MenuButtonControl">
         <!-- Set Defaults -->
         <Setter Property="Template">
             <ControlTemplate>
